--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@angular/compiler": "14.1.3",
     "@angular/core": "14.1.3",
     "@angular/forms": "14.1.3",
-    "@angular/http": "7.2.16",
     "@angular/platform-browser": "14.1.3",
     "@angular/platform-browser-dynamic": "14.1.3",
     "@angular/router": "14.1.3",
@@ -26,8 +25,7 @@
   "devDependencies": {
     "standard-version": "9.5.0",
     "@angular/compiler-cli": "14.1.3",
-    "@angular-devkit/build-ng-packagr": "0.1002.0",
-    "@angular-devkit/build-angular": "14.1.3",
+    "@angular-devkit/build-angular": "^14.0.0",
     "ng-packagr": "14.2.0",
     "tsickle": "0.46.3",
     "tslib": "2.4.0",
