--- a/package.json
+++ b/package.json
@@ -6,32 +6,33 @@
     "serve:demo": "ng serve",
     "start": "npm run serve:demo",
     "build-demo-gh-pages": "ng build --configuration production",
-    "publish:lib": "cd ./projects/ngx-paypal-lib && npm run publish:lib"
+    "publish:lib": "cd ./projects/ngx-paypal-lib && npm run publish:lib",
+    "build:tots": "ng build --project=ngx-paypal --configuration production && cd dist/tots/table/ && npm publish --access public"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.1.3",
-    "@angular/common": "14.1.3",
-    "@angular/compiler": "14.1.3",
-    "@angular/core": "14.1.3",
-    "@angular/forms": "14.1.3",
-    "@angular/platform-browser": "14.1.3",
-    "@angular/platform-browser-dynamic": "14.1.3",
-    "@angular/router": "14.1.3",
+    "@angular/animations": "15.0.4",
+    "@angular/common": "15.0.4",
+    "@angular/compiler": "15.0.4",
+    "@angular/core": "15.0.4",
+    "@angular/forms": "15.0.4",
+    "@angular/platform-browser": "15.0.4",
+    "@angular/platform-browser-dynamic": "15.0.4",
+    "@angular/router": "15.0.4",
     "core-js": "3.25.0",
     "rxjs": "7.5.6",
     "zone.js": "0.11.8"
   },
   "devDependencies": {
     "standard-version": "9.5.0",
-    "@angular/compiler-cli": "14.1.3",
-    "@angular-devkit/build-angular": "^14.0.0",
-    "ng-packagr": "14.2.0",
+    "@angular/compiler-cli": "15.0.4",
+    "@angular-devkit/build-angular": "^15.0.4",
+    "ng-packagr": "15.0.3",
     "tsickle": "0.46.3",
     "tslib": "2.4.0",
-    "typescript": "4.7.4",
-    "@angular/cli": "14.1.3",
-    "@angular/language-service": "14.1.3",
+    "typescript": "4.8.4",
+    "@angular/cli": "15.0.4",
+    "@angular/language-service": "15.0.4",
     "@types/jasmine": "4.3.0",
     "@types/jasminewd2": "2.0.10",
     "@types/node": "18.7.13",
