--- a/angular.json
+++ b/angular.json
@@ -121,7 +121,7 @@
       "prefix": "ngx",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/ngx-paypal-lib/tsconfig.lib.json",
             "project": "projects/ngx-paypal-lib/ng-package.json"
